--- a/src/mywsb-dist.scss
+++ b/src/mywsb-dist.scss
@@ -1,5 +1,5 @@
 /*!*
- * MyWSB CSS VERSION: 2017-10-13
+ * VERSION: 2017-11-12 | EPUB | Production
  * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
  * used in accordance with an MIT License (OSI).
  */
@@ -85,6 +85,7 @@ $lang-font:  "gentium plus", serif;
 
 
 
+
 /*------------------------------------*\
   #NORMALIZATION
 \*------------------------------------*/
@@ -100,20 +101,6 @@ $lang-font:  "gentium plus", serif;
 /*------------------------------------*\
   #HEADINGS
 \*------------------------------------*/
-
-$h1-margin: $spacing-large 0 $spacing-medium 0;
-$h2-margin: $h1-margin;
-$lower-level-margin: $spacing-large 0 $spacing-small 0;
-$subheading-margin: -$spacing-extra-small 0 $spacing-small 0;
-$bridgehead-margin:  0 0 $spacing-medium 0;
-$subheading-color: $mid-gray;
-
-$level-1-font: normal 500 $type-scale-2 $sans-font;
-$level-2-font: normal 500 $type-scale-3 $sans-font;
-$level-3-font: normal 500 $type-scale-4 $sans-font;
-$level-4-font: italic 500 $type-scale-4 $sans-font;
-$level-5-font: normal bold $type-scale-5 $sans-font;
-$level-6-font: italic bold $type-scale-6 $sans-font;
 
 @import "includes/shared/headings";
 
@@ -151,6 +138,10 @@ $level-6-font: italic bold $type-scale-6 $sans-font;
 \*------------------------------------*/
 
 @import "includes/shared/asides";
+
+aside {
+  @include asides();
+}
 
 
 
