--- a/src/verse.scss
+++ b/src/verse.scss
@@ -1,17 +1,14 @@
 /*!*
- * FILE:     verse.css
- * VERSION:  2017-07-09
- * AUTHOR:   Weston Littrell
+ * VERSION: 2017-11-12 | CROSS | Verse Mode
+ * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
+ * used in accordance with an MIT License (OSI).
  */
 /**
- * A refactor of legacy WORDsearch CSS, based on mywsb.css,
- * written (mostly) to this standard: http://cssguidelin.es/.
+ * A verse mode stylesheet for CROSS Bibles with
+ * functional CSS from Tachyons.
  *
- * verse.css acts as the verse mode stylesheet for CROSS Bibles
- * converted from EPUB by the B&H Direct eBook Development team.
- *
- * This version is a developer document and should be compiled and
- * minified for production environments.
+ * This scss version is a developer document and should
+ * be compiled and minified for production environments.
  */
 
 
@@ -22,9 +19,11 @@
   #CONTENTS
 \*------------------------------------*/
 /**
- * GLOBAL...............Globally-available variables.
+ * FONTS................Add font-families and variables.
+ * GLOBAL...............Other globally-available variables.
+ * NORMALIZATION........Box sizing and modified Normalize CSS
+ *                      (http: //normalize.css.github.io)
  *
- * MAIN.................Set up our document defaults.
  * TITLE-PAGE...........Title page styles.
  * HEADINGS.............h1–h6 and other headings styles.
  * INLINE-ELEMENTS......HTML inline element styles.
@@ -36,6 +35,8 @@
  * TEXT-GENERAL.........Classes for basic formatting of text.
  * TEXT-TYPES...........Classes for specific types of content.
  * LANGUAGES............Styling for language elements and classes.
+ *
+ * TACHYONS.............TACHYONS (modified) | http: //tachyons.io
  */
 
 
@@ -46,22 +47,36 @@
  #GLOBAL
 \*------------------------------------*/
 
-$def-line: 1.5em; // Default line height
-$def-font: 1em;   // Default font size
-$def-ind:  25px;   // Default text indent
 $serif-font: "Georgia", "Times New Roman", serif;
 $sans-font:  "Verdana", "Arial", "Helvetica", sans-serif;
 $lang-font:  "Gentium Plus", "Gentium", "Charis SIL", serif;
+
+@import "includes/tachyons/font-family";
 
 
 
 
 
 /*------------------------------------*\
-  #MAIN
+  #GLOBAL VARIABLES
 \*------------------------------------*/
 
-@import "includes/shared/main";
+@import "includes/tachyons/colors";
+@import "includes/tachyons/media-queries";
+@import "includes/ws/global";
+@import "includes/ws/defaults-bible";
+
+
+
+
+
+/*------------------------------------*\
+  #NORMALIZATION
+\*------------------------------------*/
+
+@import "includes/tachyons/normalize";
+@import "includes/tachyons/images";
+@import "includes/tachyons/box-sizing";
 
 body *,
 tr {
@@ -88,20 +103,6 @@ tr {
 /*------------------------------------*\
   #HEADINGS
 \*------------------------------------*/
-
-$h1-margin: 1em 0;
-$h2-margin: 1em 0 0.5em 0;
-$lower-level-margin: $h2-margin;
-$subheading-margin: -0.3em 0 0.5em 0;
-$bridgehead-margin:  0 0 0.75em 0;
-$subheading-color: #4c4e4f;
-
-$level-1-font: normal bold 1.3em $sans-font;
-$level-2-font: normal bold 1.15em $sans-font;
-$level-3-font: normal bold 1.1em $sans-font;
-$level-4-font: italic bold 1em $sans-font;
-$level-5-font: normal bold 0.95em $sans-font;
-$level-6-font: italic bold 0.9em $sans-font;
 
 @import "includes/shared/headings";
 
@@ -142,62 +143,12 @@ $level-6-font: italic bold 0.9em $sans-font;
 
 
 /*------------------------------------*\
-  #FIGURES
-\*------------------------------------*/
-
-@import "includes/shared/figures";
-
-.figure {
-  @include figure-decs();
-}
-
-.figcaption {
-  @include figcap-decs();
-}
-
-.full-width {
-  @include figure-full();
-  margin: $fallback-margin;
-
-  img {
-    margin: 0 5%;
-    width: 100%;
-  }
-}
-
-/*
- * Classes for use with figure
- */
-
-.float-right {
-  float: right;
-  @include figure-float();
-
-  img {
-    width: 100%;
-  }
-}
-
-.float-left {
-  float: left;
-  @include figure-float();
-
-  img {
-    width: 100%;
-  }
-}
-
-
-
-
-
-/*------------------------------------*\
   #QUOTES
 \*------------------------------------*/
 
 .scriptext {
   border: none;
-  font-size: 1em;
+  font-size: $spacing-medium;
   font-style: italic;
   margin: 0;
   padding: 0;
@@ -215,6 +166,7 @@ $level-6-font: italic bold 0.9em $sans-font;
 \*------------------------------------*/
 
 @import "includes/ws/blocks";
+@import "includes/shared/poetry";
 
 ol,
 ul {
@@ -239,8 +191,8 @@ ul {
   #TEXT-TYPES
 \*------------------------------------*/
 
-$fn-size: 0.6em;
-$fn-color: #000;
+$fn-size: $type-scale-8;
+$fn-color: $black;
 
 @import "includes/shared/fn";
 @import "includes/shared/bibles";
@@ -255,8 +207,8 @@ $fn-color: #000;
   display: inline;
 }
 
-.JesusWords {
-	color: red;
+span.JesusWords {
+	color: $red;
 }
 
 
@@ -268,3 +220,60 @@ $fn-color: #000;
 \*------------------------------------*/
 
 @import "includes/shared/languages";
+
+
+
+
+
+/*------------------------------------*\
+  #TACHYONS (modified)
+\*------------------------------------*/
+
+//@import "includes/tachyons/background-size";
+//@import "includes/tachyons/background-position";
+//@import "includes/tachyons/outlines";
+@import "includes/tachyons/borders";
+@import "includes/tachyons/border-colors";
+//@import "includes/tachyons/border-radius";
+@import "includes/tachyons/border-style";
+@import "includes/tachyons/border-widths";
+@import "includes/tachyons/box-shadow";
+//@import "includes/tachyons/code";
+//@import "includes/tachyons/coordinates";
+@import "includes/tachyons/clears";
+@import "includes/tachyons/display";
+//@import "includes/tachyons/flexbox";
+@import "includes/tachyons/floats";
+@import "includes/tachyons/font-family";
+@import "includes/tachyons/font-style";
+@import "includes/tachyons/font-weight";
+//@import "includes/tachyons/forms";
+@import "includes/tachyons/heights";
+@import "includes/tachyons/letter-spacing";
+@import "includes/tachyons/line-height";
+//@import "includes/tachyons/links";
+//@import "includes/tachyons/lists";
+@import "includes/tachyons/max-widths";
+@import "includes/tachyons/widths";
+@import "includes/tachyons/overflow";
+@import "includes/tachyons/position";
+@import "includes/tachyons/opacity";
+//@import "includes/tachyons/rotations";
+@import "includes/tachyons/skins";
+@import "includes/tachyons/skins-pseudo";
+@import "includes/tachyons/spacing";
+@import "includes/tachyons/negative-margins";
+@import "includes/tachyons/tables";
+@import "includes/tachyons/text-decoration";
+@import "includes/tachyons/text-align";
+@import "includes/tachyons/text-transform";
+@import "includes/tachyons/type-scale";
+@import "includes/tachyons/typography";
+@import "includes/tachyons/utilities";
+//@import "includes/tachyons/visibility";
+@import "includes/tachyons/white-space";
+@import "includes/tachyons/vertical-align";
+//@import "includes/tachyons/hovers";
+//@import "includes/tachyons/z-index";
+//@import "includes/tachyons/nested";
+@import "includes/tachyons/styles";
