--- a/src/includes/shared/_normalize.scss
+++ b/src/includes/shared/_normalize.scss
@@ -131,9 +131,10 @@ pre {
 
 a {
   background-color: transparent; /* 1 */
-  color: $blue;
+  color: #005994;
   -webkit-text-decoration-skip: objects; /* 2 */
   text-decoration: none;
+  font-weight: bold;
 }
 
 /**
@@ -142,7 +143,7 @@ a {
 
 abbr[title] {
   border-bottom: none;
-  color: #3b1b07;
+  color: #754500;
   cursor: help;
   text-decoration: none;
 }
