--- a/test/styles/mywsb-dev.css
+++ b/test/styles/mywsb-dev.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!*
-* VERSION: 2017-11-13 | EPUB | Development
+* VERSION: 2017-11-17 | EPUB | Development
 * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
 * used in accordance with an MIT License (OSI).
 */
@@ -166,9 +166,9 @@ td { line-height: 1.5; font-size: 1rem; padding: 0.5rem; vertical-align: top; }
 video { background: #fff; border: 1px solid #ccc; box-shadow: 0 0 3px rgba(1, 1, 1, 0.2), inset 0 0 100px rgba(1, 1, 1, 0.1); height: auto; margin: 2rem auto 1rem auto; text-align: center; text-indent: 0; max-width: 100%; width: 100%; }
 blockquote { border-left: 1px dotted #000; margin-bottom: 0.5rem; margin-top: 0.5rem; padding-left: 1rem; }
 blockquote p { margin: 0.5rem 0; text-indent: 0; }
-.scriptext { border: none; font-size: 1rem; font-style: italic; margin: 1rem 2rem; padding: 0; }
+.scriptext { border: none !important; font-size: 1rem; font-style: italic; margin: 1rem 2rem; padding: 0; }
 .scriptext .italic, .scriptext .i { font-style: normal; }
-.pull-center, .pull-left, .pull-right { border: none; font-size: 0.875rem; letter-spacing: 0.6rem; margin: 2rem 4rem; max-width: 70%; padding: 0; width: 70%; text-transform: uppercase; display: block; float: none; text-align: center; }
+.pull-center, .pull-left, .pull-right { border: none !important; font-size: 0.875rem; letter-spacing: 0.6rem; margin: 2rem 4rem; max-width: 70%; padding: 0; width: 70%; text-transform: uppercase; display: block; float: none; text-align: center; }
 .pull-center p, .pull-left p, .pull-right p { text-indent: 0; text-align: left; }
 .pull-center .sig, .pull-left .sig, .pull-right .sig { margin-left: 0; text-align: right; }
 @media screen and (min-width: 30em) { .pull-left { float: left; margin: 2rem; max-width: 30%; width: 30%; }
