--- a/src/includes/mywsb/_global.scss
+++ b/src/includes/mywsb/_global.scss
@@ -54,5 +54,5 @@ $letter-spacing-mega:    0.25em !default;
 
 $def-line: $lh-copy; // Default line height
 $def-font: $type-scale-5; // Default font size
-$def-ind:  $spacing-large;  // Default text indent
+$def-ind:  1.5rem;  // Default text indent
 $def-neg-ind: -$def-ind; // Default negative indent
