--- a/src/includes/ws/_defaults-bible.scss
+++ b/src/includes/ws/_defaults-bible.scss
@@ -4,3 +4,8 @@ $def-line: $lh-copy; // Default line height
 $def-font: $type-scale-5; // Default font size
 $def-ind:  25px;  // Default text indent
 $def-neg-ind: -$def-ind; // Default negative indent
+
+img {
+  border-style: none;
+  max-width: 100%;
+}
