--- a/src/includes/ws/_defaults.scss
+++ b/src/includes/ws/_defaults.scss
@@ -2,5 +2,10 @@
 
 $def-line: $lh-copy; // Default line height
 $def-font: $type-scale-5; // Default font size
-$def-ind:  $spacing-large;  // Default text indent
+$def-ind : 1.5rem; // Default text indent
 $def-neg-ind: -$def-ind; // Default negative indent
+
+img {
+  border-style: none;
+  max-width: 100%;
+}
