--- a/test/styles/mywsb-dev.css
+++ b/test/styles/mywsb-dev.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!*
-* VERSION: 2017-11-20 | EPUB | Development
+* VERSION: 2017-11-27 | EPUB | Development
 * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
 * used in accordance with an MIT License (OSI).
 */
@@ -21,6 +21,7 @@ FONT FAMILY GROUPS Docs: http://tachyons.io/docs/typography/font-family/
 .wsextra { font-family: "wsextra"; }
 .gentiumplus { font-family: "gentium plus"; }
 .ezra { font-family: "ezra sil"; }
+img { border-style: none; max-width: 100%; width: 100%; }
 /*! Heavily-modified version of normalize.css v7.0.0
 * | MIT License | github.com/necolas/normalize.css
 */
@@ -46,7 +47,6 @@ sub { font-size: 0.6rem; line-height: 0; position: relative; top: 0.3em; vertica
 sup { font-size: 0.6rem; line-height: 0; position: relative; top: -0.3em; vertical-align: baseline; }
 audio, video { display: inline-block; }
 audio:not([controls]) { display: none; height: 0; }
-img { border-style: none; width: 100%; }
 svg:not(:root) { overflow: hidden; }
 ol, ul { -webkit-padding-start: 0; }
 button, input, optgroup, select, textarea { font-family: sans-serif;  font-size: 100%;  line-height: 1.15;  margin: 0;  }
@@ -69,10 +69,6 @@ summary { display: list-item; }
 canvas { display: inline-block; }
 template { display: none; }
 [hidden] { display: none; }
-/*
-IMAGES Docs: http://tachyons.io/docs/elements/images/
-*/
-img { max-width: 100%; }
 html, body, div, article, section, main, footer, header, form, fieldset, legend, pre, code, a, h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl, dt, dd, textarea, table, td, th, tr, input[type="email"], input[type="number"], input[type="password"], input[type="tel"], input[type="text"], input[type="url"], .border-box { box-sizing: border-box; }
 section[epub|type~=copyright-page], section[epub\:type~=copyright-page] { margin: 1rem 4rem; }
 section[epub|type~=cover] img, section[epub\:type~=cover] img, section[epub|type~=titlepage] img, section[epub\:type~=titlepage] img { display: block; margin: 0 auto 2rem auto; max-width: 555px; }
