--- a/test/styles/wordsearch.css
+++ b/test/styles/wordsearch.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!*
-* VERSION: 2017-11-20 | CROSS | General
+* VERSION: 2017-11-27 | CROSS | General
 * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
 * used in accordance with an MIT License (OSI).
 */
@@ -12,12 +12,13 @@ FONT FAMILY GROUPS Docs: http://tachyons.io/docs/typography/font-family/
 .wsextra { font-family: "wsextra"; }
 .gentiumplus { font-family: "gentium plus"; }
 .ezra { font-family: "ezra sil"; }
+img { border-style: none; max-width: 100%; }
 /*! Heavily-modified version of normalize.css v7.0.0
 * | MIT License | github.com/necolas/normalize.css
 */
 html { line-height: 1.15;  -ms-text-size-adjust: 100%;  -webkit-text-size-adjust: 100%;  }
 body { font: normal normal 100% "Georgia", "Times New Roman", serif; margin: 0 2em; }
-p { line-height: 1.5; font-size: 1em; margin: 0; text-align: left; text-indent: 2em; }
+p { line-height: 1.5; font-size: 1em; margin: 0; text-align: left; text-indent: 1.5rem; }
 li { line-height: 1.5; font-size: 1em; margin: 0; text-align: left; text-indent: 0; }
 @media screen and (min-width: 30em) { p, li { text-align: justify; } }
 article, aside, footer, header, nav, section { display: block; }
@@ -37,7 +38,6 @@ sub { font-size: 0.6em; line-height: 0; position: relative; top: 0.3em; vertical
 sup { font-size: 0.6em; line-height: 0; position: relative; top: -0.3em; vertical-align: baseline; }
 audio, video { display: inline-block; }
 audio:not([controls]) { display: none; height: 0; }
-img { border-style: none; width: 100%; }
 svg:not(:root) { overflow: hidden; }
 ol, ul { -webkit-padding-start: 0; }
 button, input, optgroup, select, textarea { font-family: sans-serif;  font-size: 100%;  line-height: 1.15;  margin: 0;  }
@@ -60,10 +60,6 @@ summary { display: list-item; }
 canvas { display: inline-block; }
 template { display: none; }
 [hidden] { display: none; }
-/*
-IMAGES Docs: http://tachyons.io/docs/elements/images/
-*/
-img { max-width: 100%; }
 html, body, div, article, section, main, footer, header, form, fieldset, legend, pre, code, a, h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl, dt, dd, textarea, table, td, th, tr, input[type="email"], input[type="number"], input[type="password"], input[type="tel"], input[type="text"], input[type="url"], .border-box { box-sizing: border-box; }
 img { border-style: none; }
 .volumetitlehidden { display: none; visibility: hidden; }
@@ -89,7 +85,7 @@ h6, .h6 { font: italic bold 0.875em "Verdana", "Arial", "Helvetica", sans-serif;
 .h3sub { font: italic 500 1.11em "Verdana", "Arial", "Helvetica", sans-serif; color: #555; margin: -0.25em 0 0.5em 0; clear: both; display: block; text-indent: 0; text-align: left; }
 .bh { font: normal 500 1.11em "Verdana", "Arial", "Helvetica", sans-serif; margin: 0 0 1em 0; clear: both; display: block; text-indent: 0; text-align: center; }
 .bridgehead { font: normal 500 1.11em "Verdana", "Arial", "Helvetica", sans-serif; margin: 0 0 1em 0; clear: both; display: block; text-indent: 0; text-align: center; }
-.part, .part-1, .part-2, .part-3, .part-4, .part-5, .part-6 { background: #333; color: #fff; display: block; font-size: 2em; font-weight: bold; letter-spacing: 0.2em; margin: -1em -2em 1em -2em; padding: 2em 0 1em 0; text-align: center; text-indent: 0; }
+.part, .part-1, .part-2, .part-3, .part-4, .part-5, .part-6 { background: #333; color: #fff; display: block; font-size: 2em; font-weight: bold; letter-spacing: 0.2em; margin: -1em -1.5rem 1em -1.5rem; padding: 2em 0 1em 0; text-align: center; text-indent: 0; }
 .dictterm { color: #357edd; font: bold 1em "Verdana", "Arial", "Helvetica", sans-serif; text-align: left; text-indent: 0; }
 .esstrongs { color: #19a974; font: 0.875em "Verdana", "Arial", "Helvetica", sans-serif; }
 .aside { border: 1px solid #777; margin: 2em 0; padding: 1em 2em; }
@@ -147,7 +143,7 @@ dt { clear: both; padding: 0 0 1em 0; text-align: left; }
 dt dfn { font: normal bold 0.95em "Verdana", "Arial", "Helvetica", sans-serif; line-height: 1.5; }
 dd { margin: 0; padding: 0 0 2em 0; }
 dd p { text-indent: 0; }
-.abbr-list { padding: 0 0 0 2em; }
+.abbr-list { padding: 0 0 0 1.5rem; }
 .abbr-list dt { clear: left; float: left; padding: 0; text-align: left; width: 20%; }
 .abbr-list dt dfn { font: normal normal 0.95em "Verdana", "Arial", "Helvetica", sans-serif; line-height: 1.5; }
 .abbr-list dd { float: left; padding: 0 0.25em; width: 75%; }
@@ -195,7 +191,7 @@ hr, .video, .map, .photo, .illustration, .chart, .table, .audio, .esarticletitle
 .br-before { padding: 1em 0 0 0; }
 .center { text-align: center !important; text-indent: 0; }
 .left { text-align: left !important; }
-.hang { margin-left: 1.5rem; text-indent: -2em; }
+.hang { margin-left: 1.5rem; text-indent: -1.5rem; }
 .noind { text-indent: 0; }
 .right { text-align: right !important; text-indent: 0; }
 .bold { font-weight: bold; }
@@ -1935,9 +1931,9 @@ Media Query Extensions: -ns = not-small -m  = medium -l  = large
 .measure-wide { max-width: 34em; }
 .measure-narrow { max-width: 20em; }
 .indent { text-indent: 1.5rem; }
-.indent-neg { text-indent: -2em; }
+.indent-neg { text-indent: -1.5rem; }
 .indent-0 { text-indent: 0; }
-.indent-hanging { margin-left: 1.5rem; text-indent: -2em; }
+.indent-hanging { margin-left: 1.5rem; text-indent: -1.5rem; }
 .small-caps { font-variant: small-caps; }
 .truncate { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 @media screen and (min-width: 30em) { .measure-ns { max-width: 30em; }
