--- a/src/wordsearch.scss
+++ b/src/wordsearch.scss
@@ -182,6 +182,19 @@ $lang-font:  "Gentium Plus", "Gentium", "Charis SIL", serif;
 
 @import "includes/shared/figures";
 
+.full-width {
+  max-width: $full-width-ns;
+  width: $full-width-ns;
+}
+
+.float-right {
+  @include figure-float(right);
+}
+
+.float-left {
+  @include figure-float(left);
+}
+
 .figcaption {
   @include figcap-decs();
 }
@@ -262,6 +275,14 @@ $offset-color: $moon-gray;
 \*------------------------------------*/
 
 @import "includes/shared/quotes";
+
+.pull-left {
+  @include pullquote-float-ns(left);
+}
+
+.pull-right {
+  @include pullquote-float-ns(right);
+}
 
 
 
