--- a/test/styles/paragraph.css
+++ b/test/styles/paragraph.css
@@ -97,6 +97,9 @@ h6, .h6 { font: italic bold 0.875em "Verdana", "Arial", "Helvetica", sans-serif;
 @media screen and (min-width: 30em) { .full-width { max-width: 90%; width: 90%; }
 .float-right { float: right; margin: 0.5em 1em; max-width: 16em; width: 16em; }
 .float-left { float: left; margin: 0.5em 1em; max-width: 16em; width: 16em; } }
+.full-width { max-width: 90%; width: 90%; }
+.float-right { float: right; margin: 0.5em 1em; max-width: 16em; width: 16em; }
+.float-left { float: left; margin: 0.5em 1em; max-width: 16em; width: 16em; }
 .figcaption { font-size: 0.75em; font-style: italic; font-weight: normal; text-align: center; text-indent: 0; }
 .figcaption .italic, .figcaption .i { font-style: normal; }
 ol, ul { list-style-type: none; margin-top: 1em; margin-bottom: 1em; }
