--- a/test/styles/wordsearch.css
+++ b/test/styles/wordsearch.css
@@ -98,6 +98,9 @@ h6, .h6 { font: italic bold 0.875em "Verdana", "Arial", "Helvetica", sans-serif;
 @media screen and (min-width: 30em) { .full-width { max-width: 90%; width: 90%; }
 .float-right { float: right; margin: 0.5em 1em; max-width: 16em; width: 16em; }
 .float-left { float: left; margin: 0.5em 1em; max-width: 16em; width: 16em; } }
+.full-width { max-width: 90%; width: 90%; }
+.float-right { float: right; margin: 0.5em 1em; max-width: 16em; width: 16em; }
+.float-left { float: left; margin: 0.5em 1em; max-width: 16em; width: 16em; }
 .figcaption { font-size: 0.75em; font-style: italic; font-weight: normal; text-align: center; text-indent: 0; }
 .figcaption .italic, .figcaption .i { font-style: normal; }
 ol { margin: 1em 0 1em 0; padding: 0 0 0 4em; }
@@ -167,6 +170,8 @@ blockquote p { margin: 0.5em 0; text-indent: 0; }
 .pull-center .sig, .pull-left .sig, .pull-right .sig { margin-left: 0; text-align: right; }
 @media screen and (min-width: 30em) { .pull-left { float: left; margin: 2em; max-width: 30%; width: 30%; }
 .pull-right { float: right; margin: 2em; max-width: 30%; width: 30%; } }
+.pull-left { float: left; margin: 2em; max-width: 30%; width: 30%; }
+.pull-right { float: right; margin: 2em; max-width: 30%; width: 30%; }
 hr, .video, .map, .photo, .illustration, .chart, .table, .audio, .esarticletitle, .espagenumber, .nd { display: none !important; }
 .topiclist { background-color: #f0f8ff; border: solid #000080 1px; color: #000080; font: 0.9em "Verdana", "Arial", "Helvetica", sans-serif; margin: 0.625em 25%; padding: 0.313em; text-align: center; }
 .topiclist a, .topiclist a:link, .topiclist a:active, .topiclist a:visited { color: #0000cd; text-decoration: none; }
