--- a/test/styles/wordsearch.css
+++ b/test/styles/wordsearch.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!*
-* VERSION: 2017-11-27 | CROSS | General
+* VERSION: 2017-12-07 | CROSS | General
 * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
 * used in accordance with an MIT License (OSI).
 */
@@ -85,7 +85,7 @@ h6, .h6 { font: italic bold 0.875em "Verdana", "Arial", "Helvetica", sans-serif;
 .h3sub { font: italic 500 1.11em "Verdana", "Arial", "Helvetica", sans-serif; color: #555; margin: -0.25em 0 0.5em 0; clear: both; display: block; text-indent: 0; text-align: left; }
 .bh { font: normal 500 1.11em "Verdana", "Arial", "Helvetica", sans-serif; margin: 0 0 1em 0; clear: both; display: block; text-indent: 0; text-align: center; }
 .bridgehead { font: normal 500 1.11em "Verdana", "Arial", "Helvetica", sans-serif; margin: 0 0 1em 0; clear: both; display: block; text-indent: 0; text-align: center; }
-.part, .part-1, .part-2, .part-3, .part-4, .part-5, .part-6 { background: #333; color: #fff; display: block; font-size: 2em; font-weight: bold; letter-spacing: 0.2em; margin: -1em -1.5rem 1em -1.5rem; padding: 2em 0 1em 0; text-align: center; text-indent: 0; }
+.part, .part-1, .part-2, .part-3, .part-4, .part-5, .part-6 { background: #333; color: #fff; display: block; font-size: 2em; font-weight: bold; letter-spacing: 0.2em; margin-top: -1em; margin-right: -1.5rem; margin-bottom: 1em; margin-left: -1.5rem; padding: 2em 0 1em 0; text-align: center; text-indent: 0; }
 .dictterm { color: #357edd; font: bold 1em "Verdana", "Arial", "Helvetica", sans-serif; text-align: left; text-indent: 0; }
 .esstrongs { color: #19a974; font: 0.875em "Verdana", "Arial", "Helvetica", sans-serif; }
 .aside { border: 1px solid #777; margin: 2em 0; padding: 1em 2em; }
