remove conflicting .h# classes

--- a/src/includes/tachyons/_heights.scss
+++ b/src/includes/tachyons/_heights.scss
@@ -37,14 +37,7 @@
      -l  = large
 
 */
-
-/* Height Scale */
-
-.h1 { height: 1rem; }
-.h2 { height: 2rem; }
-.h3 { height: 4rem; }
-.h4 { height: 8rem; }
-.h5 { height: 16rem; }
+/* height scale removed... conflicts with mywsbcss classes */
 
 /* Height Percentages - Based off of height of parent */
 
