--- a/src/paragraph.scss
+++ b/src/paragraph.scss
@@ -100,6 +100,7 @@ $lang-font:  "Gentium Plus", "Gentium", "Charis SIL", serif;
 \*------------------------------------*/
 
 @import "includes/shared/headings";
+@import "includes/ws/parts";
 
 
 /**
