--- a/src/includes/tachyons/_border-widths.scss
+++ b/src/includes/tachyons/_border-widths.scss
@@ -28,12 +28,12 @@
 
 */
 
-.bw0 { border-width: 0; }
-.bw1 { border-width: .125rem; }
-.bw2 { border-width: .25rem; }
-.bw3 { border-width: .5rem; }
-.bw4 { border-width: 1rem; }
-.bw5 { border-width: 2rem; }
+.bw0 { border-width: $border-width-none; }
+.bw1 { border-width: $border-width-extra-small; }
+.bw2 { border-width: $border-width-small; }
+.bw3 { border-width: $border-width-medium; }
+.bw4 { border-width: $border-width-large; }
+.bw5 { border-width: $border-width-extra-large; }
 
 /* Resets */
 .bt-0 { border-top-width: 0; }
@@ -42,12 +42,12 @@
 .bl-0 { border-left-width: 0; }
 
 @media #{$breakpoint-not-small} {
-  .bw0-ns { border-width: 0; }
-  .bw1-ns { border-width: .125rem; }
-  .bw2-ns { border-width: .25rem; }
-  .bw3-ns { border-width: .5rem; }
-  .bw4-ns { border-width: 1rem; }
-  .bw5-ns { border-width: 2rem; }
+  .bw0-ns { border-width: $border-width-none; }
+  .bw1-ns { border-width: $border-width-extra-small; }
+  .bw2-ns { border-width: $border-width-small; }
+  .bw3-ns { border-width: $border-width-medium; }
+  .bw4-ns { border-width: $border-width-large; }
+  .bw5-ns { border-width: $border-width-extra-large; }
   .bt-0-ns { border-top-width: 0; }
   .br-0-ns { border-right-width: 0; }
   .bb-0-ns { border-bottom-width: 0; }
@@ -55,12 +55,12 @@
 }
 
 @media #{$breakpoint-medium} {
-  .bw0-m { border-width: 0; }
-  .bw1-m { border-width: .125rem; }
-  .bw2-m { border-width: .25rem; }
-  .bw3-m { border-width: .5rem; }
-  .bw4-m { border-width: 1rem; }
-  .bw5-m { border-width: 2rem; }
+  .bw0-m { border-width: $border-width-none; }
+  .bw1-m { border-width: $border-width-extra-small; }
+  .bw2-m { border-width: $border-width-small; }
+  .bw3-m { border-width: $border-width-medium; }
+  .bw4-m { border-width: $border-width-large; }
+  .bw5-m { border-width: $border-width-extra-large; }
   .bt-0-m { border-top-width: 0; }
   .br-0-m { border-right-width: 0; }
   .bb-0-m { border-bottom-width: 0; }
@@ -68,12 +68,12 @@
 }
 
 @media #{$breakpoint-large} {
-  .bw0-l { border-width: 0; }
-  .bw1-l { border-width: .125rem; }
-  .bw2-l { border-width: .25rem; }
-  .bw3-l { border-width: .5rem; }
-  .bw4-l { border-width: 1rem; }
-  .bw5-l { border-width: 2rem; }
+  .bw0-l { border-width: $border-width-none; }
+  .bw1-l { border-width: $border-width-extra-small; }
+  .bw2-l { border-width: $border-width-small; }
+  .bw3-l { border-width: $border-width-medium; }
+  .bw4-l { border-width: $border-width-large; }
+  .bw5-l { border-width: $border-width-extra-large; }
   .bt-0-l { border-top-width: 0; }
   .br-0-l { border-right-width: 0; }
   .bb-0-l { border-bottom-width: 0; }
