--- a/src/mywsb-dev.scss
+++ b/src/mywsb-dev.scss
@@ -1,5 +1,5 @@
 /*!*
- * VERSION: 2017-12-21 | EPUB | Development
+ * VERSION: 2017-04-30 | EPUB | Development
  * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
  * used in accordance with an MIT License (OSI).
  */
@@ -92,6 +92,7 @@ $lang-font:  "gentium plus", serif;
 @import "includes/tachyons/colors";
 @import "includes/tachyons/media-queries";
 @import "includes/mywsb/global";
+@import "includes/mywsb/defaults";
 
 
 
