--- a/src/mywsb-dist.scss
+++ b/src/mywsb-dist.scss
@@ -1,5 +1,5 @@
 /*!*
- * VERSION: 2017-12-21 | EPUB | Production
+ * VERSION: 2017-04-30 | EPUB | Production
  * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
  * used in accordance with an MIT License (OSI).
  */
@@ -80,6 +80,7 @@ $lang-font:  "gentium plus", serif;
 @import "includes/tachyons/colors";
 @import "includes/tachyons/media-queries";
 @import "includes/mywsb/global";
+@import "includes/mywsb/defaults";
 
 
 
